[Chromium] Use nearest filter method with pixel aligned transforms. https://bugs.webkit.org/show_bug.cgi?id=64338

Patch by David Reveman <reveman@chromium.org> on 2011-07-12
Reviewed by James Robinson.

Source/WebCore:

Check for integer translation and use nearest texture filter when
possible to avoid filter precisions problems at the layer edges.

Test: compositing/iframes/nested-iframe-scrolling.html (existing)

* platform/graphics/chromium/LayerTilerChromium.cpp:
(WebCore::LayerTilerChromium::drawTiles):
* platform/graphics/transforms/TransformationMatrix.cpp:
(WebCore::TransformationMatrix::isIntegerTranslation):
* platform/graphics/transforms/TransformationMatrix.h:

LayoutTests:

Update expected results.

* platform/chromium/test_expectations.txt:

Canonical link: https://commits.webkit.org/80144@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90887 268f45cc-cd09-0410-ab3c-d52691b4dbfc